# SUPER

./: .gitignore  ARCHITECTURE_BREAKDOWN.md  INTEGRATION_TOPIC_MAP.md  QUICK_START_INTEGRATION.md  ROG_MAP_INTEGRATION_TEST.md  RVIZ_VISUALIZATION_GUIDE.md  TESTING_GUIDE.md  TOPIC_MAP_QUICK_REFERENCE.md  frames_2025-10-22_12.18.23.gv
mars_uav_sim/perfect_drone_sim/config/: click.yaml  dense.yaml  high_speed.yaml
rog_map/include/rog_map_ros/: rog_map_ros2.hpp
super_planner/: CMakeLists.txt  package.xml
super_planner/Apps/: fsm_node.cpp
super_planner/config/: click.yaml  px4_integration.yaml  px4_integration.yaml.backup
super_planner/include/ros_interface/ros/: fsm.hpp  ros_adapter.hpp  ros_interface.hpp
super_planner/include/super_core/: super_planner.h
super_planner/include/traj_opt/: backup_traj_optimizer_s4.h  exp_traj_optimizer_s4.h
super_planner/include/utils/optimization/: minco.h
super_planner/launch/: full_integration_test.launch.py  test_super_planner.launch.py
super_planner/msg/: PolynomialTrajectory.msg  PositionCommand.msg
super_planner/rviz/: super_integration.rviz  super_test.rviz
super_planner/src/super_core/: fsm.cpp
super_planner/src/traj_opt/: backup_traj_optimizer_s4.cpp
super_planner/src/utils/: minco.cpp.backup
