<package format="3">
    <version>0.0.0</version>
    <name>super_planner</name>
    <description>super_planner</description>
    <maintainer email="renyf@connect.hku.hk">Yunfan Ren</maintainer>
    <license>BSD</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>rog_map</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>